<resources>
    <string name="app_name">IndigoApp</string>
    <string name="loginpageheader">ALREADY REGISTERED ?</string>
    <string name="socialaccountsigninheader">Sign in with social accounts</string>
    <string name="top_button">Tops</string>
    <string name="denim_button">Denims</string>
    <string name="pant_button">Pants</string>
    <string name="dress_button">Dresses</string>
    <string name="saving_button">Cyber Savings</string>
    <string name="voucher_button">Gift Voucher</string>
    <string name="category_heading">Categories</string>
    <string name="hint_text">This is a hint</string>
    <string name="top1_name">Long Sleeve White and Blue Linen Top</string>
    <string name="top2_name">Short Sleeve Yellow Cotton Top</string>
    <string name="newmember">NEW MEMBER?</string>
    <string name="signupwith">Sign up with social accounts is easy</string>
    <string name="or">OR</string>
    <string name="emailsignup">sign up with your email</string>
    <string name="name">YOUR NAME*</string>
    <string name="emailcump">EMAIL ADDRESS*</string>
    <string name="pwcump">PASSWORD*</string>
    <string name="dob">DATE OF BIRTH</string>
    <string name="gender">GENDER</string>
    <string name="radiobuttonGirl">Girl</string>
    <string name="radioButtonguy">Guy</string>
    <string name="termsandcondition"><![CDATA[I accept Terms & Conditions]]></string>
    <string name="newsletters">Subscribe to Newsletters</string>
    <string name="emailsignin">sign in with your email</string>
    <string name="emailhint">EMAIL ADDRESS</string>
    <string name="pwhint">PASSWORD</string>
    <string name="forgotpw">Forgot Password?</string>
    <string name="signin">SIGN IN</string>
    <string name="newmem">New member?</string>
    <string name="signup">SIGN UP TODAY</string>
    <string name="signupp">SIGN UP</string>
    <string name="Myaccount">MY ACCOUNT</string>
    <string name="myname">Shadini Kalansooriya</string>
    <string name="btnAccountOverview">ACCOUNT OVERVIEW</string>
    <string name="btnAddressBoook">ADDRESSS BOOK</string>
    <string name="btnOrderHistory">ORDER HISTORY</string>
    <string name="btnWISHLIST">WISHLIST</string>
    <string name="btnStorecredit">STORE CREDIT</string>
    <string name="btnNewsLetter">NEWSLETTER</string>
    <string name="btnLogout">LOGOUT</string>
    <string name="propicdescription">Profile Picture Appears here</string>
    <string name="google">googleicon</string>
    <string name="fbicon">facebook icon</string>
    <string name="top_category">TOPS</string>
    <string name="top1_price">1200/-</string>
    <string name="top2_price">2000/-</string>
    <string name="logo_name">LOGO</string>
    <string name="conform_purchasing">Conform purchasing</string>
    <string name="user_name">User name</string>
    <string name="payment">Payment</string>
    <string name="sub_total">Sub total</string>
    <string name="payment_method">Payment method</string>
    <string name="add_to_card">Add to card</string>
    <string name="cash_on_delivery">Cash on delivery</string>
    <string name="wishlist">wishlist</string>
    <string name="delete">delete</string>
    <string name="about">Indigo believes in giving you the confidence to be whomever you want to be. We believe in you to be brave, and fearless and enjoy the adventure that is life to its fullest. No matter who you are, what you do, and where you come from, Arienti is here to provide you with the clothing to create your own unique style that is unapologetically you.</string>
    <string name="msg">How you like it!</string>
    <string name="top1_like">Like button</string>
    <string name="top2_like">Like button</string>
    <string name="add_to_button">Add To Cart</string>
    <string name="remove_from_cart">Remove From Cart</string>
    <string name="current_selected_number">2</string>
    <string name="current_selected_number_2">3</string>
    <string name="shadiniemail">shadinikala@gmail.com</string>
    <string name="password">*********</string>
    <string name="DOB">26/05/1998</string>
    <string name="edit">EDIT</string>
    <string name="DELETE">DELETE</string>
    <string name="loveIndigo">Love Indigo</string>
    <string name="Upload">Upload a picture in Indigo clothing to get featured</string>
    <string name="hashTag">#AddYourHashTagHere</string>
    <string name="ClickGalleryView">Click to check the Gallery</string>
    <string name="Gallery">Gallery</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="home">Home</string>
    <string name="shopping_bag">Shopping Bag</string>
    <string name="wish_list">Wish List</string>
    <string name="promotions">Promotions</string>
    <string name="gallery">Gallery</string>
    <string name="contact_us">Contact Us</string>
    <string name="feedback">Feedback</string>
    <string name="aboutnav">About</string>
    <string name="category">Category</string>
    <string name="AlreadyRegistered">Already Registered ?</string>
    <string name="uploadApic">Upload A picture</string>
    <string name="comPW">CONFIRM PASSWORD</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="confPW">Confirm Password</string>

    <string name="address">Address</string>
    <string name="mobile_numbercaps">MOBILE NUMBER</string>
    <string name="addresscaps">ADDRESS</string>
    <string name="ChangePassword">Change Password</string>
    <string name="CurrPW">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="Change">Change</string>
    <string name="denim_title">Denims</string>
    <string name="remove_cart">REMOVE FROM CART</string>
    <string name="Name">Name</string>
    <string name="Namecaps">NAME</string>
    <string name="update">UPDATE</string>
    <string name="DeleteAccount">DELETE ACCOUNT</string>
    <string name="add_products">Add Product</string>
    <string name="add_promo">Add Promotions</string>
    <string name="mng_gallery">Manage Gallery</string>
    <string name="admin_title">Administration</string>
    <string name="add_voucher">Add Voucher</string>
    <string name="prod_name">Product Name</string>
    <string name="product_price">Product Price</string>
    <string name="product_desc">Product Description</string>
    <string name="product_qty">Product Quantity</string>
    <string name="search_btn">Search</string>
    <string name="srch_prod_name">Search Product Name</string>
    <string name="edit_prod">Edit Products</string>
    <string name="voucher_price">Voucher Price</string>
    <string name="voucher_qty">Voucher Quantity</string>
    <string name="feedreq">Send feedback</string>
    <string name="current">Currently Available</string>
    <string name="ava">Available</string>
    <string name="categ_name">Category Name</string>
    <string name="price">Price</string>
    <string name="prod_img_url">Product Image URL</string>
    <string name="edit_vou">Edit Voucher</string>
    <string name="export">Export</string>
    <string name="add">Add</string>
    <string name="choose_image">Choose Image</string>
    <string name="HashTag">#HashTag</string>
    <string name="search_you">Search You</string>
    <string name="changeProPic">Change Profile Picture</string>
    <string name="Select_Image">Select Image</string>
    <string name="CHANGE">CHANGE</string>
    <string name="search_vou">search Voucher</string>
    <!--    <string name="update">UPDATE</string>-->

    <string-array name="user">
        <!--        <item>Patient</item>-->
        <item>RegisteredUser</item>
        <item>Admin</item>
    </string-array>
    <string name="view_prod">View Products List</string>
    <string name="view_vouc">View Voucher List</string>
    <string name="sel_pro_image">Choose your Products Image</string>
    <string name="choose_vou">Choose Voucher Image</string>

    <string-array name="category">
        <item>Tops</item>
        <item>Dresses</item>
        <item>Pants</item>
        <item>Denims</item>
    </string-array>
    <string name="prod_list_admin">Products List</string>
    <string name="vou_list_admin">Vouchers List</string>
    <string name="update_info">Update</string>
    <string name="updatfeed">update</string>


</resources>
