<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_b_home"
        android:icon="@drawable/ic_home"
        android:title="@string/home" />

    <item
        android:id="@+id/nav_b_category"
        android:icon="@drawable/category"
        android:title="@string/category" />

    <item
        android:id="@+id/nav_b_gallery"
        android:icon="@drawable/gallery2"
        android:title="@string/gallery" />

    <item
        android:id="@+id/nav_b_wishlist"
        android:icon="@drawable/wishlist"
        android:title="@string/wishlist" />

    <item
        android:id="@+id/nav_b_shoppingbag"
        android:icon="@drawable/ic_shopping_basket_black_24dp"
        android:title="@string/shopping_bag" />




</menu>