<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="49dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="4dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="8dp"
                android:background="@android:color/holo_purple"
                android:fontFamily="@font/concert_one"
                android:text="@string/loginpageheader"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:fontFamily="sans-serif-condensed-light"
                android:text="@string/socialaccountsigninheader"
                android:textAlignment="center"
                android:textColor="@color/lightBlack"
                android:textSize="24sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:weightSum="2">

                <ImageView
                    android:id="@+id/imageViewfb"
                    android:layout_width="41dp"
                    android:layout_height="77dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_weight="1"
                    android:contentDescription="@string/fbicon"
                    app:srcCompat="@drawable/fb" />

                <ImageView
                    android:id="@+id/imageViewGoogle"
                    android:layout_width="58dp"
                    android:layout_height="77dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_weight="1"
                    android:contentDescription="@string/google"
                    app:srcCompat="@drawable/google2" />

            </LinearLayout>

            <EditText
                android:id="@+id/editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:gravity="start|top"
                android:inputType="textMultiLine" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/or"
                android:textAlignment="center"
                android:textColor="@color/lightBlack"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="sans-serif-condensed-light"
                android:text="@string/emailsignin"
                android:textAlignment="center"
                android:textColor="@color/lightBlack"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/editTextEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="8dp"
                android:ems="10"
                android:hint="@string/emailhint"
                android:inputType="textEmailAddress"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/editTextPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="8dp"
                android:ems="10"
                android:hint="@string/pwhint"
                android:inputType="textPassword"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/textViewforgotPw"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginRight="8dp"
                android:text="@string/forgotpw"
                android:textAlignment="textEnd"
                android:textColor="@color/BlackHeader"
                android:textSize="18sp" />

            <Button
                android:id="@+id/buttonSignIn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="12dp"
                android:background="@color/BlackHeader"
                android:fontFamily="serif"
                android:text="@string/signin"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/newmem"
                android:textAlignment="center"
                android:textColor="@color/lightBlack"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textViewSignUp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/signup"
                android:textAlignment="center"
                android:textColor="@color/BlackHeader"
                android:textSize="24sp"
                android:textStyle="bold" />
        </LinearLayout>

    </ScrollView>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:attr/windowBackground"
        android:layout_alignParentBottom="true"
        app:itemTextColor="@color/colorindigo1"
        app:itemIconTint="@color/lightIndigo"
        android:foregroundGravity="bottom"
        app:menu="@menu/bottom_nav" />

</RelativeLayout>