<?xml version="1.0" encoding="utf-8"?>

<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_Layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:openDrawer="start">

<!--
    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:headerLayout="@layout/header"
        app:menu="@menu/main_menu" />-->


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar" />

        <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="70dp"
                android:orientation="vertical">


                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:fontFamily="sans-serif-condensed-light"
                    android:text="@string/signupwith"
                    android:textAlignment="center"
                    android:textColor="@color/lightBlack"
                    android:textSize="24sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:weightSum="2">

                    <ImageView
                        android:id="@+id/imageViewfb"
                        android:layout_width="41dp"
                        android:layout_height="77dp"
                        android:layout_marginLeft="8dp"
                        android:layout_marginRight="8dp"
                        android:layout_weight="1"
                        android:contentDescription="@string/fbicon"
                        app:srcCompat="@drawable/fb" />

                    <ImageView
                        android:id="@+id/imageViewGoogle"
                        android:layout_width="31dp"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="8dp"
                        android:layout_marginRight="8dp"
                        android:layout_weight="1"
                        android:contentDescription="@string/google"
                        app:srcCompat="@drawable/google2" />

                </LinearLayout>

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/or"
                    android:textAlignment="center"
                    android:textColor="@color/lightBlack"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:fontFamily="sans-serif-condensed-light"
                    android:text="@string/emailsignup"
                    android:textAlignment="center"
                    android:textColor="@color/lightBlack"
                    android:textSize="24sp" />

                <EditText
                    android:id="@+id/editTextName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginRight="8dp"
                    android:ems="10"
                    android:hint="@string/name"
                    android:inputType="textPersonName"
                    android:textSize="24sp" />

                <EditText
                    android:id="@+id/editTextEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginRight="8dp"
                    android:ems="10"
                    android:hint="@string/emailcump"
                    android:inputType="textEmailAddress"
                    android:textSize="24sp" />

                <EditText
                    android:id="@+id/editTextPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginRight="8dp"
                    android:ems="10"
                    android:hint="@string/pwcump"
                    android:inputType="textPassword"
                    android:textSize="24sp" />


                <EditText
                    android:id="@+id/editTextConfPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginRight="8dp"
                    android:ems="10"
                    android:hint="@string/confPW"
                    android:inputType="textPassword"
                    android:textSize="24sp" />

                <EditText
                    android:id="@+id/editTextMobile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginRight="8dp"
                    android:ems="10"
                    android:hint="@string/mobile_number"
                    android:inputType="number"
                    android:textSize="24sp" />

                <EditText
                    android:id="@+id/editTextAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginRight="8dp"
                    android:ems="10"
                    android:hint="Address"
                    android:inputType="text"
                    android:textSize="24sp" />



                <TextView
                    android:id="@+id/textViewGender"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/gender"
                    android:textColor="@color/lightBlack"
                    android:textSize="18sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginRight="8dp"
                    android:orientation="horizontal">

                    <RadioGroup
                        android:id="@+id/gender"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1">



                            <RadioButton
                                android:id="@+id/radioButtonGirl"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="@string/radiobuttonGirl"
                                android:textColor="@color/lightBlack"
                                android:textSize="18sp" />

                            <RadioButton
                                android:id="@+id/radioButtonGuy"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="@string/radioButtonguy"
                                android:textColor="@color/lightBlack"
                                android:textSize="18sp" />


                    </RadioGroup>

                </LinearLayout>

                <CheckBox
                    android:id="@+id/checkBoxTerms"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/termsandcondition" />

                <CheckBox
                    android:id="@+id/checkBoxNewsletters"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:text="@string/newsletters" />

                <Button
                    android:id="@+id/buttonsignup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginRight="8dp"
                    android:background="@color/BlackHeader"
                    android:text="@string/signupp"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/textView18"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:text="@string/AlreadyRegistered"
                    android:textAlignment="center" />

                <TextView
                    android:id="@+id/textViewSignIn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:layout_marginBottom="140dp"
                    android:text="@string/signin"
                    android:textAlignment="center"
                    android:textColor="@color/BlackHeader"
                    android:textStyle="bold" />

            </LinearLayout>
        </ScrollView>


        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/bottom_navigation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="?android:attr/windowBackground"
            android:foregroundGravity="bottom"
            app:itemIconTint="@color/lightIndigo"
            app:itemTextColor="@color/colorindigo1"
            app:menu="@menu/bottom_nav" />


    </RelativeLayout>

</androidx.drawerlayout.widget.DrawerLayout>